--- a/package.json
+++ b/package.json
@@ -8,11 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "github:react-native-community/async-storage",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/material-bottom-tabs": "^5.3.14",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-button-toggle-group": "^1.1.1",
+    "react-native-calendar-picker": "^7.1.0",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^3.2.0",
+    "react-native-gesture-handler": "^1.10.1",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.7.1",
+    "react-native-radio-buttons-group": "^2.1.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-screens": "^2.17.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
