--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-file-system": "~9.3.0",
+    "expo-media-library": "~10.0.0",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
     "react": "16.13.1",
@@ -31,6 +34,7 @@
     "react-native-gesture-handler": "^1.10.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.7.1",
+    "react-native-picker-dropdown": "^0.1.2",
     "react-native-radio-buttons-group": "^2.1.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-screens": "^2.17.1",
